# rosa

./: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml
docs/: conf.py  installation.rst
src/rosa/: __init__.py  cli.py
