[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rosa"
version = "0.1.0"
description = "Package containing simple DNA manipulation functions from rosalind.info"
readme = "README.rst"
authors = [
  {name = "Alyss Flynn", email = "alyss.flynn@me.com"}
]
maintainers = [
  {name = "Alyss Flynn", email = "alyss.flynn@me.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/alyssflynn/rosa/issues"
changelog = "https://github.com/alyssflynn/rosa/blob/master/changelog.md"
homepage = "https://github.com/alyssflynn/rosa"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

